feat: adjust pagination response in transaction and inventory